# gitrust

./: Cargo.toml  README.md
src/: git.rs  macros.rs  main.rs
